--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "short_name": "CoinPusher",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#1a0000",
-  "theme_color": "#1a0000",
+  "background_color": "#1a0520",
+  "theme_color": "#ffd700",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2454/2454269.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2534/2534204.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/2454/2454269.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2534/2534204.png",
       "sizes": "512x512",
       "type": "image/png"
     }
